Alteracaoes de cores e video na homepage

--- a/_sass/materialize/components/_color.scss
+++ b/_sass/materialize/components/_color.scss
@@ -153,7 +153,9 @@ $cyan: (
   "accent-1":    #84ffff,
   "accent-2":    #18ffff,
   "accent-3":    #00e5ff,
-  "accent-4":    #00b8d4
+  "accent-4":    #4c8981,
+  "accent-5": #36605d
+  
 );
 
 $teal: (
