--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,13 +5,13 @@ layout: default
   <div class="section no-pad-bot" id="index-banner">
     <div class="container sob">
       <br><br>
-      <h1 class="header center orange-text">{{ site.title }}</h1>
+      <h1 class="header center yellow-text">{{ site.title }}</h1>
       <div class="row center">
         <h5 class="header col s12 light">{{ content }}</h5>
       </div>
         
       <div class="row center">
-        <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light orange">Venha Conhecer</a>
+        <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light cyan accent-4">Venha Conhecer</a>
       </div>
       <br><br>
 
@@ -35,7 +35,7 @@ layout: default
     background-color: rgba(45,72,113,.84);
 }
 .overlay-video {
-    background-color: rgba(45,72,113,.84);
+    background-color: #4c8981ad;
     z-index: 9;
     top: 0;
     left: 0;
@@ -71,7 +71,7 @@ layout: default
       <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center light-blue-text"><i class="material-icons">flash_on</i></h2>
+            <h2 class="center blue-grey-text text-lighten-1"><i class="material-icons">flash_on</i></h2>
             <h5 class="center">Super animados</h5>
 
             <p class="light">Superando todos os deesafios e querendo sempre alcançar o melhor.</p>
@@ -80,7 +80,7 @@ layout: default
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center light-blue-text"><i class="material-icons">group</i></h2>
+            <h2 class="center blue-grey-text text-lighten-1"><i class="material-icons">group</i></h2>
             <h5 class="center"> Foco e Disciplina</h5>
 
             <p class="light">Temos total Disciplica em nossas voltas por Umuarama, sabemos dos desafios que encontramos</p>
@@ -89,9 +89,9 @@ layout: default
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center light-blue-text"><i class="material-icons">settings</i></h2>
+            <h2 class="center blue-grey-text text-lighten-1"><i class="material-icons">settings</i></h2>
             <h5 class="center">Ensimamentos</h5>
-
+            
             <p class="light">Estamos sempre de braços abertos para acolher todos os novos integrante e claro ensinamos com cautela e paciencia cada novo integrante.</p>
           </div>
         </div>
