--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,24 +1,30 @@
 ---
 layout: default
 ---
-<div class="sobre-back" style="background-image: url(/img/patins-sobre.png);">
-	<h1 class="page__title">Sobre</h1>
+<div class="parallax-container">
+    <div class="parallax"><img src="/img/patins-sobre.png"></div>
+   <div class="back-sobre">
+    <h1 class="text-sobre">SOBRE</h1>
 </div>
-<style>
-      .sobre-back{
-       background-attachment: fixed;
-       background-size: contain;
-       padding: 6em 0 2em;
-       filter: grayscale(100%);
-       background-repeat:no-repeat;
-        }
-        .page__title{
-            color: #fff;
-            text-align: center;
-        }
-</style>
+  </div>
+  <style>
+      .back-sobre{
+         
+          align-items: center;
+          justify-content: center;
+          display: flex;
+      }
+      .text-sobre{
+        background-color: rgba(16, 139, 139, 0.301);
+          color:#fff;
+          width: 200px;
+      }
+  </style>
+
+  <div class="section white">
 <div class="container">
 
     {{ content }}
 
+</div>
 </div>
