novos bannes nas paginas

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,7 +20,7 @@
           <h5 class="white-text">Contatos</h5>
           <ul>
         
-            <li><a class="white-text" href="#!">  <i class="fa fa-facebook-official" aria-hidden="true"></i>  Facebook</a></li>
+            <li><a class="white-text" target="_blank" href="https://www.facebook.com/groups/1565503743691121/">  <i class="fa fa-facebook-official" aria-hidden="true"></i>  Facebook</a></li>
             <li><a class="white-text" href="#!">  <i class="fa fa-instagram" aria-hidden="true"></i>  Instagram</a></li>
             <li><a class="white-text" href="#!">   <i class="fa fa-whatsapp" aria-hidden="true"></i>  WhatsApp</a></li>
     
