--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@ layout: default
   <div class="section no-pad-bot" id="index-banner">
     <div class="container sob">
       <br><br>
-      <h1 class="header center yellow-text">{{ site.title }}</h1>
+      <h1 class="header title-perfect center yellow-text">{{ site.title }}</h1>
       <div class="row center">
         <h5 class="header col s12 light">{{ content }}</h5>
       </div>
@@ -71,7 +71,7 @@ layout: default
       <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center blue-grey-text text-lighten-1"><i class="material-icons">flash_on</i></h2>
+            <h2 class="center blue-grey-text text-lighten-1"><i class="material-icons">favorite</i></h2>
             <h5 class="center">Super animados</h5>
 
             <p class="light">Superando todos os deesafios e querendo sempre alcançar o melhor.</p>
@@ -80,7 +80,9 @@ layout: default
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center blue-grey-text text-lighten-1"><i class="material-icons">group</i></h2>
+            <h2 class="center blue-grey-text text-lighten-1"><i class="material-icons">pan_tool
+
+            </i></h2>
             <h5 class="center"> Foco e Disciplina</h5>
 
             <p class="light">Temos total Disciplica em nossas voltas por Umuarama, sabemos dos desafios que encontramos</p>
@@ -89,7 +91,7 @@ layout: default
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center blue-grey-text text-lighten-1"><i class="material-icons">settings</i></h2>
+            <h2 class="center blue-grey-text text-lighten-1"><i class="material-icons">child_care</i></h2>
             <h5 class="center">Ensimamentos</h5>
             
             <p class="light">Estamos sempre de braços abertos para acolher todos os novos integrante e claro ensinamos com cautela e paciencia cada novo integrante.</p>
