--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,29 +2,30 @@
 layout: default
 ---
 <div class="parallax-container">
-    <div class="parallax"><img src="/img/patins-sobre.png"></div>
+    <div class="parallax"><img src="/img/patins-sobre.jpg"></div>
    <div class="back-sobre">
-    <h1 class="text-sobre">SOBRE</h1>
+    <h1 class="title-perfect text-sobre">Quem Somos</h1>
 </div>
   </div>
   <style>
       .back-sobre{
-         
+          background-color: #4c8981ad;
           align-items: center;
           justify-content: center;
           display: flex;
+          width: 100%;
+          height: 100%;
       }
       .text-sobre{
-        background-color: rgba(16, 139, 139, 0.301);
+       
           color:#fff;
-          width: 200px;
+          
       }
   </style>
 
-  <div class="section white">
+  
 <div class="container">
 
     {{ content }}
 
-</div>
 </div>
